--- a/app/views/admin/dashboard/_top_nav.html.erb
+++ b/app/views/admin/dashboard/_top_nav.html.erb
@@ -9,24 +9,32 @@
    <!-- Navbar Search-->
    <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
      <div class="input-group">
-       <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
+       <input class="form-control" type="text" placeholder="Tìm kiếm" aria-label="Search for..."
          aria-describedby="btnNavbarSearch" />
        <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
      </div>
    </form>
    <!-- Navbar-->
    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+     <% if user_signed_in? %>
      <li class="nav-item dropdown">
        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
          aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-         <li><a class="dropdown-item" href="#!">Settings</a></li>
-         <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+         <li><%= link_to "Trang cá nhân",  edit_user_registration_path, class:"dropdown-item" %></li>
          <li>
            <hr class="dropdown-divider" />
          </li>
-         <li><a class="dropdown-item" href="#!">Logout</a></li>
+         <li><%= link_to "Đăng xuất", destroy_user_session_path, method: :delete, class:"dropdown-item" %></li>
        </ul>
      </li>
+     <% else %>
+      <li class="nav-item">
+        <%= link_to "Đăng kí", new_user_registration_path, class:"nav-link active" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Đăng nhập",  new_user_session_path, class:"nav-link active" %>
+      </li>
+     <% end %>
    </ul>
  </nav>
