--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Thanh toán") %>
 <%= render 'home/header'%>
 <div class="container mt-2">
   <main>
@@ -8,83 +9,118 @@
           <span class="badge bg-primary rounded-pill"><%= @current_cart.order_details.size %></span>
         </h4>
         <ul class="list-group mb-3">
-          <% @cart.order_details.each do |order_detail| %>
+          <% @current_cart.order_details.each do |order_detail| %>
           <li class="list-group-item d-flex justify-content-between lh-sm">
             <div>
               <h6 class="my-0"><%= order_detail.product.name %></h6>
             </div>
-            <span class="text-muted"><%= order_detail.product.price %></span>
+            <span class="text-muted"><%= order_detail.product.price %>x</span>
             <span class="text-muted"><%= order_detail.quantity %></span>
           </li>
           <% end %>
-          <%# <li class="list-group-item d-flex justify-content-between bg-light">
-            <div class="text-success">
-              <h6 class="my-0">Promo code</h6>
-              <small>EXAMPLECODE</small>
-            </div>
-            <span class="text-success">−$5</span>
-          </li> %>
           <li class="list-group-item d-flex justify-content-between">
-            <span>Tổng tiền (USD)</span>
+            <span>Tổng tiền (VND)</span>
             <strong><%= @current_cart.sub_total %></strong>
           </li>
         </ul>
-        <%# <form class="card p-2">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Promo code">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
-          </div>
-        </form> %>
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Bill</h4>
         <%= form_for @order do |order| %>
+        <% if @order.errors.any? %>
+        <div id="error_explanation">
+          <div class="alert alert-danger">
+            The form contains <%= pluralize(@order.errors.count, "error") %>.
+          </div>
+          <ul>
+            <% @order.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+        <% end %>
         <div class="col-12">
           <label for="address" class="form-label">Địa chỉ nhận hàng</label>
-          <%= order.text_field :address, required: true, autofocus: true,class:"form-control" %>
-          
+          <%= order.text_field :address, autofocus: true,class:"form-control" %>
           <%= order.hidden_field :user_id, value: current_user.id  %>
           <div class="invalid-feedback">
             Please enter your shipping address.
           </div>
           <hr class="my-4">
-          <div id="payment-element">
-            <label for="address" class="form-label">Thanh toán</label>
-            <div id="card">
-              <!-- Elements will create input elements here -->
+          <div class="form-row">
+            <label for="card-element">
+              Credit or debit card
+            </label>
+            <div id="card-element">
+              <!-- A Stripe Element will be inserted here. -->
             </div>
-            <!--Stripe.js injects the Payment Element-->
+
+            <!-- Used to display Element errors. -->
+            <div id="card-errors" role="alert"></div>
           </div>
-
-
-          <!-- We'll put the error messages in this element -->
-          <div id="card-errors" role="alert"></div>
-
-          <%= order.submit "Đặt hàng #{@cart.sub_total}", class:"btn btn-outline-dark mt-auto border-0", style:"background-color: orange" %>
+          <hr>
+          <%= order.submit "Đặt hàng #{@current_cart.sub_total}đ", class:"btn btn-outline-dark mt-auto border-0", style:"background-color: orange" %>
         </div>
-
         <% end %>
       </div>
     </div>
   </main>
 </div>
-
 <%= render 'home/footer' %>
 <script>
-  const stripe = Stripe(
-    "pk_test_51L8JPcIekHnUbT8KJUIoE5Q34nJWFDXoSPSX02SjE9zqtpwK3j957WVucSpEMTacWBYUGGHkRdqxsuf9ZBq6qt0B00kToy2awu");
-  const appearance = {
-    theme: 'night'
-  };
-
+  var stripe = Stripe(
+    'pk_test_51L8JPcIekHnUbT8KJUIoE5Q34nJWFDXoSPSX02SjE9zqtpwK3j957WVucSpEMTacWBYUGGHkRdqxsuf9ZBq6qt0B00kToy2awu');
   var elements = stripe.elements();
   var style = {
     base: {
-      color: "#32325d",
-    }
+      // Add your base input styles here. For example:
+      fontSize: '16px',
+      color: '#32325d',
+    },
   };
 
-  var paymentElement = elements.create('card');
-  paymentElement.mount("#card");
- 
+  var card = elements.create("card", {
+    style: style
+  });
+  card.mount("#card-element");
+
+  card.on('change', function (event) {
+    var displayError = document.getElementById('card-errors');
+    if (event.error) {
+      displayError.textContent = event.error.message;
+    } else {
+      displayError.textContent = '';
+    }
+  });
+
+  var form = document.getElementById('new_order');
+  form.addEventListener('submit', function (event) {
+    event.preventDefault();
+    // window.reload();
+
+    stripe.createToken(card).then(function (result) {
+      if (result.error) {
+        // Inform the customer that there was an error.
+        var errorElement = document.getElementById('card-errors');
+        errorElement.textContent = result.error.message;
+      } else {
+        // Send the token to your server.
+        console.log(result.token)
+        stripeTokenHandler(result.token);
+      }
+    });
+  });
+
+  function stripeTokenHandler(token) {
+    // Insert the token ID into the form so it gets submitted to the server
+    var form = document.getElementById('new_order');
+    var hiddenInput = document.createElement('input');
+    hiddenInput.setAttribute('type', 'hidden');
+    hiddenInput.setAttribute('name', 'stripeToken');
+    hiddenInput.setAttribute('value', token.id);
+    form.appendChild(hiddenInput);
+
+    // Submit the form
+    form.submit();
+  }
 </script>
