--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,6 @@
+<%= redender "home/header" %>
 <%= @order.current_cart do |item| %>
   
 <% end %>
 <p><%= @orders.address %></p>
+<%= render "home/footer" %>
