--- a/app/views/products/_search.html.erb
+++ b/app/views/products/_search.html.erb
@@ -1,6 +1,6 @@
 <%= search_form_for @q, class: "d-flex" do |f| %>
 <li class="nav-item">
-  <%= f.search_field :name_cont, class: "form-control mr-sm-2 border-0" %>
+  <%= f.search_field :name_cont, class: "form-control me-2" %>
 </li>
 <li class="nav-item ">
   <%= f.submit "Tìm kiếm", class:"btn btn-outline-light mr-2" %>
