--- a/app/views/admin/categories/_categories_content.html.erb
+++ b/app/views/admin/categories/_categories_content.html.erb
@@ -6,13 +6,21 @@
     <div class="row mt-4">
       <div class="col-6">
         <%= form_for @category, url: admin_categories_path do |f| %>
-          
-        <div class="form-group">
-          <label>Loại sản phẩm</label>
-          <%= f.text_field :name,required:true, autofocus: true, class:"form-control" %>
-          <small id="emailHelp" class="form-text text-muted">Nhập vào loại sản phẩm</small>
-        </div>
-        <button type="submit" class="btn btn-primary">Thêm </button>
+          <% if @category.errors.any? %>
+            <div id="error_explanation">
+              <ul>
+                <% @category.errors.full_messages.each do |msg| %>
+                  <li class="alert-danger"><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+          <div class="form-group">
+            <label>Loại sản phẩm</label>
+            <%= f.text_field :name, class:"form-control" %>
+            <small id="emailHelp" class="form-text text-muted">Nhập vào loại sản phẩm</small>
+          </div>
+          <button type="submit" class="btn btn-primary">Thêm </button>
         <% end %>
       </div>
     </div>
@@ -26,20 +34,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @categories.each_with_index do |category, index| %>
-            <tr>
-              <th scope="row"><%= index %></th>
-              <td><%= category.name %></td>
-              <td>
-                <%=link_to  admin_category_path(category), method: :delete,data: { confirm: "Are you sure?" }, class:"btn btn-outline-danger" do %>
-                <i class="fa-solid fa-trash-can"></i>
-                <% end %>
-                <%=link_to  edit_admin_category_path(category), class:"btn btn-outline-warning" do %>
-                <i class="fa-solid fa-pen-to-square"></i>
-                <% end %>
-              </td>
-            </tr>
-            <% end %>
+            <%= render partial: 'list_category', collection: @categories %>
           </tbody>
         </table>
       </div>
