--- a/app/views/admin/products/_products_content.html.erb
+++ b/app/views/admin/products/_products_content.html.erb
@@ -4,29 +4,38 @@
     <div class="alert alert-<%= message_type %>"><%= message %></div>
     <% end %>
     <div class="row mt-4 ">
-
-      <%= form_for  @product,url: admin_products_path,html:{class:"d-flex"}  do |f| %>
-        <div class="col-6">
+      <%= form_for @product,url: admin_products_path  do |f| %>
+        <% if @product.errors.any? %>
+            <div id="error_explanation">
+              <ul>
+                <% @product.errors.full_messages.each do |msg| %>
+                  <li class="alert-danger"><%= msg %></li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
+        <div class= "d-flex">
+          <div class="col-6">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Tên sản phẩm</label>
-            <%= f.text_field :name,required: true, class: "form-control" %>
+            <%= f.text_field :name, class: "form-control " %>
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Giá</label>
-            <%= f.number_field :price,required: true, class: "form-control", min:'250000', value:'250000' %>
+            <%= f.number_field :price, class: "form-control", min:'250000', value:'250000' %>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Màu</label>
-            <%= f.text_field :color,required: true, class: "form-control" %>
+            <%= f.text_field :color, class: "form-control" %>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Size</label>
-           <%= f.text_field :size,required: true, class: "form-control" %>
+           <%= f.text_field :size, class: "form-control" %>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Mô tả</label>
-            <%= f.text_area :description,required: true, class: "form-control" %>
+            <%= f.text_area :description, class: "form-control" %>
           </div>
           <button type="submit" class="btn btn-primary">Thêm</button>
         </div>
@@ -42,6 +51,7 @@
             </label>
             <%= f.file_field :image, onchange:"loadFile(event)" %>
           </div>
+        </div>
         </div>
       <% end %>
     </div>
