--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "Giỏ hàng") %>
+
 <%= render 'home/header' %>
 <section>
   <div class="container">
@@ -5,33 +7,49 @@
       <div class="col">
         <table class="table table-borderless table-hover">
           <tr>
-            <td scope="col"><input type="checkbox" /></td>
             <td class="nav-item" scope="col">Tên sản phẩm</td>
             <td class="nav-item" scope="col">Đơn giá</td>
             <td class="nav-item" scope="col">Số lượng</td>
             <td class="nav-item" scope="col">Thành tiền</td>
           </tr>
           <tbody>
-            <% @cart.order_details.each  do |order_detail| %>
-              <tr>
-                <th scope="row"><input type="checkbox" /></th>
-                <td class="align-middle ">
-                  <%= image_tag(order_detail.product.image.url, alt: 'Image',size: '50x40', class:"img-thumbnail mr-2") %>
-                  <%= order_detail.product.name  %>
-                </td>
-                <td class="align-middle text-center"><%= order_detail.product.price  %></td>
-                <td class="align-middle text-center" style="width:20%">
-                  <input type="number" aria-label="Last name" value="<%= order_detail.quantity %>" class="form-control"
-                    style="width:30%" value=1 min=1>
-                </td>
-                <th class="align-middle text-center" scope="row">
-                  <%= order_detail.total_price %>
-                </th>
-                <th class="align-middle text-center" scope="row">
-                  <%=link_to "Xóa", order_detail_path(order_detail), method: :delete, class:"btn btn-danger" %>
-                </th>
+            <% @current_cart.order_details.each  do |order_detail| %>
+            <tr>
+              
+              <td class="align-middle ">
+                <%= image_tag(order_detail.product.image.url, alt: 'Image',size: '50x40', class:"img-thumbnail mr-2") %>
+                <%= order_detail.product.name  %>
+              </td>
+              <td class="align-middle text-center"><%= order_detail.product.price  %></td>
+              <td class="align-middle text-center" style="width:20%">
+                <div class="input-group mb-3" style="width:50%" >
+                  <div class="input-group-prepend">
+                    <%= link_to  order_detail_reduce_path(:id => order_detail), style: 'text-decoration:none' , method: :post do %>
+                    <span class="input-group-text" id="basic-addon1">
+                      -
+                    </span>
+                    <% end %>
+                  </div>
+                  <input type="text" class="form-control" aria-describedby="basic-addon1" 
+                  value="<%= order_detail.quantity %>" >
+                  <div class="input-group-prepend">
+                    <%= link_to order_detail_add_path(:id => order_detail), style: 'text-decoration:none' , method: :post do %>
+                    <span class="input-group-text" id="basic-addon1" type="button">
+                      +
+                    </span>
+                    <% end %>
+                  </div>
+                </div>
+              </td>
+              <th class="align-middle text-center" scope="row">
+              
+                <%= order_detail.total_price %>đ
+              </th>
+              <th class="align-middle text-center" scope="row">
+                <%=link_to "Xóa", order_detail_path(order_detail), method: :delete,data: { confirm: "Bạn chắc chứ?" }, class:"btn btn-danger" %>
+              </th>
 
-              </tr>
+            </tr>
             <% end %>
           </tbody>
         </table>
@@ -42,17 +60,17 @@
       </div>
       <div class="col-5 d-flex">
 
-        <p class="mr-2">Tổng thanh toán: <%= @cart.sub_total%></p>
+        <p class="mr-2" style="font-weight:bold">Tổng thanh toán: <%= @current_cart.sub_total%>đ</p>
         <ul class="navbar-nav mr-auto my-2 my-lg-0 navbar-nav-scroll" style="max-height: 100px;">
           <li class="nav-item active">
             <form class="d-flex">
               <%= link_to products_path do %>
               <button class="btn btn-outline-success mr-2" type="submit">Mua Thêm</button>
               <% end %>
-              <% if user_signed_in? %>
-              <%= link_to "Mua hàng", new_order_path, class:"btn btn-outline-success"%>
+              <% if @current_cart.order_details.empty? %>
+              <%= link_to "Mua hàng", '#', data:{confirm: "Chưa có sp trong giỏ!"},class:"btn btn-outline-success"%>
               <% else %>
-              <%=link_to "mua di", user_session_path %>
+              <%= link_to "Mua hàng", new_order_path, class:"btn btn-outline-success"%>
               <% end %>
             </form>
           </li>
