--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-6 offset-3">
-      <h1><%= t('.forgot_your_password') %></h1>
+    <div class="col-6 offset-2 mt-4">
+      <h2><%= t('.forgot_your_password') %></h2>
 
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
       <%= bootstrap_devise_error_messages! %>
@@ -18,5 +18,6 @@
 
       <%= render 'devise/shared/links' %>
     </div>
+    
   </div>
 </div>
