--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-6 offset-3">
-      <h1><%= t('.title', resource: resource_name.to_s.humanize) %></h1>
+    <div class="col-6 offset-2 mt-4">
+      <h2><%= t('.title', resource: resource_name.to_s.humanize) %></h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= bootstrap_devise_error_messages! %>
@@ -45,6 +45,9 @@
       </p>
 
       <%= link_to t('.back'), :back %>
+    </div>
+    <div class="col-4 mt-4">
+      <%= image_tag'logo.png',class: 'mt-5', size: '400x400' %>
     </div>
   </div>
 </div>
