--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-4 offset-2 mt-4">
 
-      <h1><%= t('.sign_up') %></h1>
+      <h2><%= t('.Sign up') %></h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= bootstrap_devise_error_messages! %>
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+        <%= f.email_field :email, autocomplete: 'email', class: 'form-control' %>
       </div>
 
       <div class="form-group">
@@ -37,6 +37,9 @@
       <% end %>
 
       <%= render 'devise/shared/links' %>
+    </div>
+    <div class="col-4 mt-4">
+      <%= image_tag'logo.png',class: 'mt-5', size: '400x400' %>
     </div>
   </div>
 </div>
