--- a/app/views/products/_productrend.html.erb
+++ b/app/views/products/_productrend.html.erb
@@ -26,8 +26,8 @@
         <!-- Product actions-->
         <div class="card-footer p-2 pt-0 border-top-0 bg-transparent">
           <div class="text-center">
-            <a class="btn btn-outline-dark mt-auto border-0 text-light" style="background-color: orangered"
-                  href="#">Thêm vào giỏ</a>
+            <%= button_to "Thêm vào giỏ", order_details_path(product_id: product.id),
+                  class:"btn btn-outline-dark mt-auto border-0 text-light", style:"background-color: orangered" %>
           </div>
         </div>
       </div>
