--- a/app/views/products/_search.html.erb
+++ b/app/views/products/_search.html.erb
@@ -1,5 +1,5 @@
-<%= search_form_for @q, class: "d-flex" do |f| %>
-<li class="nav-item">
+<%= search_form_for @q, class: "me-2 d-flex" do |f| %>
+<li class="nav-item ">
   <%= f.search_field :name_cont, class: "form-control me-2" %>
 </li>
 <li class="nav-item ">
