--- a/app/views/admin/categories/_list_category.html.erb
+++ b/app/views/admin/categories/_list_category.html.erb
@@ -1,8 +1,8 @@
-<tr>
+<tr id='category_<%= list_category.id %>' >
   <th scope="row"><%= list_category.id %></th>
   <td><%= list_category.name %></td>
-  <td>
-    <%=link_to  admin_category_path(list_category), method: :delete,data: { confirm: "bạn chắc chưa?" }, class:"btn btn-outline-danger" do %>
+  <td >
+    <%=link_to  admin_category_path(list_category), method: :delete,data: { confirm: "bạn chắc chưa?" }, class:"btn btn-outline-danger", remote: true do %>
     <i class="fa-solid fa-trash-can"></i>
     <% end %>
     <%=link_to  edit_admin_category_path(list_category), class:"btn btn-outline-warning" do %>
