--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,37 +5,10 @@
   <div id="layoutSidenav">
     <%= render 'admin/dashboard/layout_side_nav' %>
     <div id="layoutSidenav_content">
-      <main>
-        <div class="container-fluid px-4">
-          <div class="row">
-            <div class="col">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Tên sản phẩm</th>
-                    <th scope="col">Giá</th>
-                    <th scope="col">Số lượng</th>
-                    <th scope="col">Địa chỉ nhận hàng</th>
-                    <th scope="col">Người đặt hàng</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% @orders.each_with_index do |order, index| %>
-                    <th scope="row"> <%= index +1 %></th>
-                    <td><%= order.order_details.first.product.name %></td>
-                    <td><%= order.order_details.first.price %></td>
-                     <td><%= order.order_details.first.quantity %></td>
-                    <td><%= order.address %></td>
-                    <td><%= order.user.user_name %></td>
-                  </tr>
-                  <% end %>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </main>
+      <% flash.each do |message_type, message| %>
+     <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
+      <%= render partial: "list_order", collection: @orders %>
       <%= render 'admin/dashboard/footer' %>
     </div>
   </div>
