--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -10,43 +10,41 @@
           <% end %>
           <div class="row mt-4 ">
 
-            <%= form_for  @product,url: admin_product_path,html:{class:"d-flex"}  do |f| %>
-            <div class="col-6">
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Tên sản phẩm</label>
-                <%= f.text_field :name,required: true, class: "form-control" %>
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <%= simple_form_for @product,url: admin_product_path  do |f| %>
+              <div class="d-flex">
+                <div class="col-4 me-2">
+                  <div class="mb-3">
+                    <%= f.input :name %>
+                  </div>
+                  <div class="mb-3">
+                    <%# <label for="exampleInputPassword1" class="form-label">Giá</label> %>
+                    <%= f.input :price, class: "form-control" %>
+                  </div>
+                  <div class="mb-3">
+                    <%= f.input :color, class: "form-control" %>
+                  </div>
+                  <div class="mb-3">
+                    <%= f.input :size, class: "form-control" %>
+                  </div>
+                  <div class="mb-3">
+                    <%= f.input :description,as: :text, class: "form-control"%>
+                  </div>
+                  <%= f.button :submit, "Save", class: "btn btn-primary" %>
+                </div>
+                <div class="col-6">
+                  <div class="mb-3">
+                    <%= f.input :category_id do %>
+                    <%= f.select(:category_id, @categories.pluck(:name, :id), {}, {:class => 'selectpicker form-select'}) %>
+                    <% end %>
+                  </div>
+                  <div class="mb-3 form-group">
+                    <label id="image-label" class="image-hover" for="article_thumbnail">
+                      <%= image_tag "logo.png", id: "thumbnail-img", size: "200x200" %>
+                    </label>
+                    <%= f.input :image,label: false,input_html: {onchange:"loadFile(event)"} %>
+                  </div>
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Giá</label>
-                <%= f.number_field :price,required: true, class: "form-control", min:'250000', value:'250000' %>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Màu</label>
-                <%= f.text_field :color,required: true, class: "form-control" %>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Size</label>
-                <%= f.text_field :size,required: true, class: "form-control" %>
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Mô tả</label>
-                <%= f.text_area :description,required: true, class: "form-control" %>
-              </div>
-              <button type="submit" class="btn btn-primary">Lưu</button>
-            </div>
-            <div class="col-6">
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Chọn Loại sản phẩm</label>
-                <%= f.select(:category_id, @categories.pluck(:name, :id), {}, {:class => 'selectpicker form-select'}) %>
-              </div>
-              <div class="mb-3">
-                <label id="image-label" class="image-hover" for="article_thumbnail">
-                  <%= image_tag "logo.png", id: "thumbnail-img", size: "200x200" %>
-                </label>
-                <%= f.file_field :image, onchange:"loadFile(event)"  %>
-              </div>
-            </div>
             <% end %>
           </div>
         </div>
