--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -26,41 +26,28 @@
       </div>
       <div class="col-md-7 col-lg-8">
         <h4 class="mb-3">Bill</h4>
-        <%= form_for @order do |order| %>
-        <% if @order.errors.any? %>
-        <div id="error_explanation">
-          <div class="alert alert-danger">
-            The form contains <%= pluralize(@order.errors.count, "error") %>.
-          </div>
-          <ul>
-            <% @order.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-        <% end %>
-        <div class="col-12">
-          <label for="address" class="form-label">Địa chỉ nhận hàng</label>
-          <%= order.text_field :address, autofocus: true,class:"form-control" %>
-          <%= order.hidden_field :user_id, value: current_user.id  %>
-          <div class="invalid-feedback">
-            Please enter your shipping address.
-          </div>
-          <hr class="my-4">
-          <div class="form-row">
-            <label for="card-element">
-              Credit or debit card
-            </label>
-            <div id="card-element">
-              <!-- A Stripe Element will be inserted here. -->
+        <%= simple_form_for @order do |order| %>
+          <div class="col-12">
+            <%= order.input :address, class:"form-control" %>
+            <%= order.hidden_field :user_id, value: current_user.id  %>
+            <div class="invalid-feedback">
+              Please enter your shipping address.
             </div>
+            <hr class="my-4">
+            <div class="form-row">
+              <label for="card-element">
+                Credit or debit card
+              </label>
+              <div id="card-element">
+                <!-- A Stripe Element will be inserted here. -->
+              </div>
 
-            <!-- Used to display Element errors. -->
-            <div id="card-errors" role="alert"></div>
+              <!-- Used to display Element errors. -->
+              <div id="card-errors" role="alert"></div>
+            </div>
+            <hr>
+            <%= order.submit "Đặt hàng #{@current_cart.sub_total}đ", class:"btn btn-outline-dark mt-auto border-0", style:"background-color: orange" %>
           </div>
-          <hr>
-          <%= order.submit "Đặt hàng #{@current_cart.sub_total}đ", class:"btn btn-outline-dark mt-auto border-0", style:"background-color: orange" %>
-        </div>
         <% end %>
       </div>
     </div>
